zero-schema-macros/tests/ui/fail/24_collision_copy_from.rs
use zero_schema_macros::zero;

#[zero]
struct CopyFromCollision {
    copy_from: u8,
}

fn main() {}
